[package]
name = "flanterm"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Bindings to flanterm terminal"
readme = "README.md"
documentation = "https://docs.rs/flanterm"
repository = "https://github.com/morr0ne/flanterm"
include = [
    "src/**/*.rs",
    "README.md",
    "LICENSE",
    "build.rs",
    "flanterm/*",
    "!flanterm/.gitignore",
    "!flanterm/README.md",
]

[dependencies]

[build-dependencies]
cc = "1.2.13"
